# tauri-yew-i18n-demo

./: .taurignore  Cargo.toml  LICENSE  README.md  index.html
i18n/de-DE/: tauri_yew_i18n_demo.ftl  tauri_yew_i18n_demo_ui.ftl
i18n/en-GB/: tauri_yew_i18n_demo.ftl  tauri_yew_i18n_demo_ui.ftl
src/: app.rs
src-tauri/: Cargo.toml  i18n.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
