[package]
name = "tauri-yew-i18n-demo-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "web-sys-requester"] }
i18n-embed-fl = "0.8.0"
rust-embed = { version = "8.2.0", features = ["debug-embed"] }

[workspace]
members = ["src-tauri"]
